--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.20.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.20.0",
+    "twilio": "^5.10.5"
   }
 }
